added show/update product
