# storage/api-docs/api-docs.json
@@ -383,7 +383,7 @@
                     "Files"
                 ],
                 "description": "upload files for models",
-                "operationId": "d939b49815f82909d0eab3ff267b397c",
+                "operationId": "c0e937195d963ad3d67e80c2dad48918",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -644,6 +644,127 @@
                                                 "id": 1,
                                                 "title": "Product Title",
                                                 "description": "Product description",
+                                                "updated_at": "2024-02-03T16:53:20.000000Z",
+                                                "created_at": "2024-02-03T16:53:20.000000Z",
+                                                "images": [
+                                                    "https://gssc.esa.int/navipedia/images/a/a9/Example.jpg"
+                                                ]
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
+        "/api/products/show/{id}": {
+            "get": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get product",
+                "operationId": "98428cf562e91c20988f5a2591ac1231",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get product",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "example": {
+                                                "id": 1,
+                                                "title": "Product Title",
+                                                "description": "Product description",
+                                                "updated_at": "2024-02-03T16:53:20.000000Z",
+                                                "created_at": "2024-02-03T16:53:20.000000Z",
+                                                "images": [
+                                                    "https://gssc.esa.int/navipedia/images/a/a9/Example.jpg"
+                                                ]
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/update/{id}": {
+            "post": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "update product",
+                "operationId": "e972d12e32f359e052b07770261c455e",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "update product",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object"
+                            },
+                            "example": {
+                                "title": "Product",
+                                "description": "Product description",
+                                "stock": 111,
+                                "price": 10.1
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "200": {
+                        "description": "Get product",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "example": {
+                                                "id": 1,
+                                                "title": "Product Title",
+                                                "description": "Product description",
+                                                "stock": 1,
+                                                "price": 10.1,
                                                 "updated_at": "2024-02-03T16:53:20.000000Z",
                                                 "created_at": "2024-02-03T16:53:20.000000Z",
                                                 "images": [
